Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.14.0, 5.14.1
-
Fix Version/s: 5.14.2, 5.15.0 Beta1
-
Component/s: Connectivity: Bluetooth
-
Labels:None
-
Platform/s:
-
Commits:0bb394194aad69574b98de5b43da82b0f0a4a454 (qt/qtconnectivity/5.14)
Description
When connecting an Android client to a Bluetooth Windows server, inside the "clientConnected" slot, QBluetoothServer::hasPendingConnections() hangs (app not responsive).
To reproduce just add the following lines in the btChat exemple, at the beginning of ChatServer::clientConnected():
qWarning()<<"checking pending connections ?"; bool has = rfcommServer->hasPendingConnections(); qWarning()<<"has pending connections ?"<<has;
Thanks,
Philippe