winrt: Avoid possible hang in QBluetoothServer::hasPendingConnections

We have to unlock the mutex locker after the pending connection is
handled in QBluetoothServerPrivate::handleClientConnection. Otherwise
the application will hang, if the slot that is connected to
QBluetoothServer::newConnection calls
QBluetoothServer::hasPendingConnections as this functions also tries to
lock the mutex.

Fixes: QTBUG-81827
Change-Id: I40632d0c1e4a6cf4436f6471e5a0933c53dda9f1
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>